<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_custom_layout_dialog">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_85"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_add_new_song"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_10dp"
            android:text="@string/title_add_new_song"
            android:textSize="19sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/tv_input_name_song"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:hint="@string/input_name_song"
            android:maxHeight="50dp"
            android:textColor="@color/white"
            android:maxLines="1"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical_85"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical_15"
            app:layout_constraintTop_toBottomOf="@+id/tv_add_new_song" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/tv_input_name_singer"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_10dp"
            android:hint="@string/input_name_singer"
            android:maxHeight="50dp"
            android:maxLines="1"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical_85"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical_15"
            app:layout_constraintTop_toBottomOf="@id/tv_input_name_song" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_10dp"
            android:layout_marginBottom="@dimen/dimens_10dp"
            android:background="@drawable/bg_button_custom"
            android:backgroundTint="#8150FF"
            android:text="@string/add"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical_85"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical_15"
            app:layout_constraintTop_toBottomOf="@id/tv_input_name_singer" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>