<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_custom_layout_dialog">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_85"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_delete_song"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_10dp"
            android:text="@string/would_you_like_delete_this_song"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_10dp"
            android:layout_marginBottom="@dimen/dimens_10dp"
            android:background="@drawable/bg_button_custom"
            android:backgroundTint="#8150FF"
            android:text="@string/delete"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_cancel"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical_15"
            app:layout_constraintTop_toBottomOf="@id/tv_delete_song" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_10dp"
            android:layout_marginBottom="@dimen/dimens_10dp"
            android:background="@drawable/bg_button_custom"
            android:backgroundTint="#8150FF"
            android:text="@string/cancel"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical_85"
            app:layout_constraintStart_toEndOf="@id/btn_accept"
            app:layout_constraintTop_toBottomOf="@id/tv_delete_song" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>